--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "fs-extra": "^0.26.4",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "request": "^2.67.0",
+    "serve-favicon": "~2.3.0",
+    "sleep": "^3.0.0"
   }
 }
